<resources>
    <string name="app_name">Calculator</string>
    <string name="divide_zero">Cannot divide by zero</string>
    <string name="null_data">You forgot to fill all fields</string>
    <string name="wrong_format">Check input data for correctness</string>
    <string name="wrong_operation">Check operation, app can calculate operations: +, -, *, /</string>
    <string name="input_first">Input first number</string>
    <string name="input_second">Input second number</string>
    <string name="input_operation">Input operation</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result: </string>

</resources>